; ModuleID = '/home/carl/AnghaBench/linux/drivers/media/platform/ti-vpe/extr_vpdma.c_vpdma_clear_list_stat.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/media/platform/ti-vpe/extr_vpdma.c_vpdma_clear_list_stat.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vpdma_data = type { i32 }

@VPDMA_INT_LIST0_STAT = common dso_local global i64 0, align 8
@VPDMA_INTX_OFFSET = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @vpdma_clear_list_stat(%struct.vpdma_data* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.vpdma_data*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i64, align 8
  store %struct.vpdma_data* %0, %struct.vpdma_data** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %8 = load i64, i64* @VPDMA_INT_LIST0_STAT, align 8
  %9 = load i32, i32* @VPDMA_INTX_OFFSET, align 4
  %10 = load i32, i32* %5, align 4
  %11 = mul nsw i32 %9, %10
  %12 = sext i32 %11 to i64
  %13 = add nsw i64 %8, %12
  store i64 %13, i64* %7, align 8
  %14 = load %struct.vpdma_data*, %struct.vpdma_data** %4, align 8
  %15 = load i64, i64* %7, align 8
  %16 = load i32, i32* %6, align 4
  %17 = mul nsw i32 %16, 2
  %18 = shl i32 3, %17
  %19 = call i32 @write_reg(%struct.vpdma_data* %14, i64 %15, i32 %18)
  ret void
}

declare dso_local i32 @write_reg(%struct.vpdma_data*, i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
